--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@ h1 {
     font-size: 50px;
 }
 
-.orange {
+h2 {
+    font-size: 40px;
+}
+
+.orange-color {
     color: orange;
 }
 
 .flexible-area {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .helf-width {
@@ -44,4 +49,31 @@ h1 {
     background-image: url("./images/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experiance-item {
+    width: 50%;
+    box-shadow: 10px 10px 30px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-left: 7px solid tomato;
+    border-radius: 10px;
+}
+
+.baby-dev {
+    border-left: 7px solid blue;
+}
+
+.experiance-area {
+    background-image: url("./images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position-y: left;
+}
+
+.footer {
+    text-align: center;
+    color: gray;
+    padding: 10px;
+    margin: 10px;
 }
